--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -345,6 +345,7 @@ a:hover {
         "item-4 item-5 item-6"
         "item-7 item-8 item-9";
     justify-items: center;
+    
 }
 
 .item-1 {
@@ -377,14 +378,17 @@ a:hover {
 
 .profile-card {
     text-align: center;
-    max-width: 85%;
+    width: 200px;
+    padding: 2px;
 }
 
 .profile-card img {
     border-radius: 20px;
     max-width: 100%;
+    
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    object-fit: cover;
 }
 
 .card-text{
@@ -400,4 +404,68 @@ a:hover {
 .author{
     display: flex;
     column-gap: 10px;
+}
+
+.card-top{
+    position: relative;
+}
+
+.del-post-btn{
+    position: absolute;
+    right: 0;
+    opacity: 0;
+    padding: 20px 12px;
+    border-radius: 20px;
+    border: 1px solid #a259ff;
+    background-color: #2B2B2B;
+}
+
+.card-top:hover .del-post-btn{
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
+    opacity: 100;
+}
+
+.line-hor{
+    border-radius: 50px;
+    background-color: black;
+    padding: 2px 10px;
+    /* margin-top: 2.5px; */
+    transform: rotate(-45deg);
+
+}
+.line-vert{
+    border-radius: 50px;
+    background-color: black;
+    padding: 2px 10px;
+    margin-top: -3px;
+
+    transform: rotate(45deg);
+}
+
+
+.btn-view-rankings {
+    align-items: center;
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: #2b2b2b;
+    color: white;
+    border: 1px solid #a259ff;
+    font-weight: 500;
+    display: flex;
+    column-gap: 10px;
+    transition: cubic-bezier(0.19, 1, 0.22, 1) 2s;
+}
+
+
+.profile_avatar_manage {
+    border-radius: 360px;
+    margin-top: -65px;
+    transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
+
+}
+.profile_avatar_manage:hover {
+    border-radius: 360px;
+    opacity: 20%;
+    transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    cursor: pointer;
 }
